--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Bostrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <!-- CSS -->
-  <link href="style.css" rel="stylesheet">
+  <link href="Styles2.css" rel="stylesheet">
       <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
